# OPAD

./: .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/detector/: anomaly_struct.hpp  detector.cpp  detector.hpp
cpp/io_manager/: reader.cpp  reader.hpp
cpp/parser/: log_struct.hpp  parser.cpp  parser.hpp
cpp/reporter/: reporter.cpp  reporter.hpp
cpp/socket_server/: socket_server.cpp  socket_server.hpp
cpp/utils/: debug.hpp  utils.cpp  utils.hpp
dashboard/: main.py
dashboard/backend/: __init__.py  report_builder.py  server.py  socket_client.py
dashboard/frontend/: index.html
dashboard/frontend/scripts/: script.js
dashboard/frontend/styles/: page_not_found_style.css  report_style.css  style.css
dashboard/templates/: page_not_found.html  report.html  report_card.html
testbed/: attacker.py  ips.txt  server.py  wordlist.txt
